--- a/dev.ipynb
+++ b/dev.ipynb
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +624,7 @@
        "0   Acre  2004     630328"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,9 +665,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 141,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Estado</th>\n",
+       "      <th>Populacao</th>\n",
+       "      <th>Timestamp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Acre</td>\n",
+       "      <td>630328</td>\n",
+       "      <td>jan. 2004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Acre</td>\n",
+       "      <td>630328</td>\n",
+       "      <td>fev. 2004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Acre</td>\n",
+       "      <td>630328</td>\n",
+       "      <td>mar. 2004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Acre</td>\n",
+       "      <td>630328</td>\n",
+       "      <td>abr. 2004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Acre</td>\n",
+       "      <td>630328</td>\n",
+       "      <td>mai. 2004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5827</th>\n",
+       "      <td>Tocantins</td>\n",
+       "      <td>1607363</td>\n",
+       "      <td>ago. 2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5828</th>\n",
+       "      <td>Tocantins</td>\n",
+       "      <td>1607363</td>\n",
+       "      <td>set. 2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5829</th>\n",
+       "      <td>Tocantins</td>\n",
+       "      <td>1607363</td>\n",
+       "      <td>out. 2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5830</th>\n",
+       "      <td>Tocantins</td>\n",
+       "      <td>1607363</td>\n",
+       "      <td>nov. 2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5831</th>\n",
+       "      <td>Tocantins</td>\n",
+       "      <td>1607363</td>\n",
+       "      <td>dez. 2021</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5832 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Estado  Populacao  Timestamp\n",
+       "0          Acre     630328  jan. 2004\n",
+       "1          Acre     630328  fev. 2004\n",
+       "2          Acre     630328  mar. 2004\n",
+       "3          Acre     630328  abr. 2004\n",
+       "4          Acre     630328  mai. 2004\n",
+       "...         ...        ...        ...\n",
+       "5827  Tocantins    1607363  ago. 2021\n",
+       "5828  Tocantins    1607363  set. 2021\n",
+       "5829  Tocantins    1607363  out. 2021\n",
+       "5830  Tocantins    1607363  nov. 2021\n",
+       "5831  Tocantins    1607363  dez. 2021\n",
+       "\n",
+       "[5832 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "month = []\n",
     "for mes in  df_consumo_residencial.columns.tolist()[1:]:\n",
@@ -689,17 +809,221 @@
     "df_populacao = pd.DataFrame(expanded_rows)\n",
     "\n",
     "# Reset the index of the new DataFrame\n",
-    "df_populacao = df_populacao.reset_index(drop=True)\n"
+    "df_populacao = df_populacao.reset_index(drop=True)\n",
+    "df_populacao['Timestamp'] = df_populacao['Month']+' '+df_populacao['ano'].astype(str)\n",
+    "df_populacao.drop(columns=['ano', 'Month'], inplace=True)\n",
+    "df_populacao.head()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### PIB"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_populacao['Timestamp'] = df_populacao['Month']+' '+df_populacao['ano'].astype(str)\n",
-    "df_populacao.drop(columns=['ano', 'Month'], inplace=True)"
+    "df_pib = pd.read_csv('data/social/pib.csv')\n",
+    "df_pib.rename(columns={'pib': 'PIB'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ano</th>\n",
+       "      <th>Estado</th>\n",
+       "      <th>PIB</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>Rondônia</td>\n",
+       "      <td>11004641436</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    ano    Estado          PIB\n",
+       "0  2004  Rondônia  11004641436"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "state_names = {\n",
+    "    'AC': 'Acre',\n",
+    "    'AL': 'Alagoas',\n",
+    "    'AP': 'Amapá',\n",
+    "    'AM': 'Amazonas',\n",
+    "    'BA': 'Bahia',\n",
+    "    'CE': 'Ceará',\n",
+    "    'DF': 'Distrito Federal',\n",
+    "    'ES': 'Espírito Santo',\n",
+    "    'GO': 'Goiás',\n",
+    "    'MA': 'Maranhão',\n",
+    "    'MT': 'Mato Grosso',\n",
+    "    'MS': 'Mato Grosso do Sul',\n",
+    "    'MG': 'Minas Gerais',\n",
+    "    'PA': 'Pará',\n",
+    "    'PB': 'Paraíba',\n",
+    "    'PR': 'Paraná',\n",
+    "    'PE': 'Pernambuco',\n",
+    "    'PI': 'Piauí',\n",
+    "    'RJ': 'Rio de Janeiro',\n",
+    "    'RN': 'Rio Grande do Norte',\n",
+    "    'RS': 'Rio Grande do Sul',\n",
+    "    'RO': 'Rondônia',\n",
+    "    'RR': 'Roraima',\n",
+    "    'SC': 'Santa Catarina',\n",
+    "    'SP': 'São Paulo',\n",
+    "    'SE': 'Sergipe',\n",
+    "    'TO': 'Tocantins'\n",
+    "}\n",
+    "df_pib['Estado'] = df_pib['Estado'].map(state_names)\n",
+    "df_pib.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Estado</th>\n",
+       "      <th>PIB</th>\n",
+       "      <th>Timestamp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Rondônia</td>\n",
+       "      <td>11004641436</td>\n",
+       "      <td>jan. 2004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Rondônia</td>\n",
+       "      <td>11004641436</td>\n",
+       "      <td>fev. 2004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Rondônia</td>\n",
+       "      <td>11004641436</td>\n",
+       "      <td>mar. 2004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Rondônia</td>\n",
+       "      <td>11004641436</td>\n",
+       "      <td>abr. 2004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Rondônia</td>\n",
+       "      <td>11004641436</td>\n",
+       "      <td>mai. 2004</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Estado          PIB  Timestamp\n",
+       "0  Rondônia  11004641436  jan. 2004\n",
+       "1  Rondônia  11004641436  fev. 2004\n",
+       "2  Rondônia  11004641436  mar. 2004\n",
+       "3  Rondônia  11004641436  abr. 2004\n",
+       "4  Rondônia  11004641436  mai. 2004"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "month = []\n",
+    "for mes in  df_consumo_residencial.columns.tolist()[1:]:\n",
+    "    month.append(mes.split(' ')[0])\n",
+    "months = month[:12]\n",
+    "# Create an empty list to store expanded rows\n",
+    "expanded_rows = []\n",
+    "\n",
+    "# Iterate over each row in the original DataFrame\n",
+    "for _, row in df_pib.iterrows():\n",
+    "    year = row['ano']\n",
+    "    pib = row['PIB']\n",
+    "    \n",
+    "    # Iterate over each month and create a new row\n",
+    "    for month in months:\n",
+    "        expanded_rows.append({'Estado': row['Estado'], 'ano': year, 'PIB': pib, 'Month': month})\n",
+    "\n",
+    "# Create a new DataFrame with the expanded rows\n",
+    "df_pib = pd.DataFrame(expanded_rows)\n",
+    "\n",
+    "# Reset the index of the new DataFrame\n",
+    "df_pib = df_pib.reset_index(drop=True)\n",
+    "df_pib['Timestamp'] = df_pib['Month']+' '+df_pib['ano'].astype(str)\n",
+    "df_pib.drop(columns=['ano', 'Month'], inplace=True)\n",
+    "df_pib.head()"
    ]
   },
   {
@@ -720,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -748,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -765,11 +1089,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.merge(df, df_populacao, on=['Timestamp', 'Estado'])\n"
+    "df = pd.merge(df, df_populacao, on=['Timestamp', 'Estado'])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "PIB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.merge(df, df_pib, on=['Timestamp', 'Estado'])"
    ]
   },
   {
@@ -782,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -811,6 +1152,7 @@
        "      <th>Consumo Residencial</th>\n",
        "      <th>Consumo Industrial</th>\n",
        "      <th>Populacao</th>\n",
+       "      <th>PIB</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -821,6 +1163,7 @@
        "      <td>41.823</td>\n",
        "      <td>15.490</td>\n",
        "      <td>1562085</td>\n",
+       "      <td>11004641436</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -829,6 +1172,7 @@
        "      <td>40.309</td>\n",
        "      <td>18.641</td>\n",
        "      <td>1562085</td>\n",
+       "      <td>11004641436</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -837,6 +1181,7 @@
        "      <td>41.622</td>\n",
        "      <td>16.961</td>\n",
        "      <td>1562085</td>\n",
+       "      <td>11004641436</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -845,6 +1190,7 @@
        "      <td>42.820</td>\n",
        "      <td>17.462</td>\n",
        "      <td>1562085</td>\n",
+       "      <td>11004641436</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -853,6 +1199,7 @@
        "      <td>39.616</td>\n",
        "      <td>18.505</td>\n",
        "      <td>1562085</td>\n",
+       "      <td>11004641436</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -861,50 +1208,56 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5826</th>\n",
-       "      <td>ago. 2021</td>\n",
+       "      <th>5502</th>\n",
+       "      <td>ago. 2020</td>\n",
        "      <td>Distrito Federal</td>\n",
-       "      <td>206.265</td>\n",
-       "      <td>55.557</td>\n",
-       "      <td>3094325</td>\n",
+       "      <td>203.972</td>\n",
+       "      <td>56.441</td>\n",
+       "      <td>3055149</td>\n",
+       "      <td>265847334003</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5827</th>\n",
-       "      <td>set. 2021</td>\n",
+       "      <th>5503</th>\n",
+       "      <td>set. 2020</td>\n",
        "      <td>Distrito Federal</td>\n",
-       "      <td>217.979</td>\n",
-       "      <td>51.866</td>\n",
-       "      <td>3094325</td>\n",
+       "      <td>202.745</td>\n",
+       "      <td>56.663</td>\n",
+       "      <td>3055149</td>\n",
+       "      <td>265847334003</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5828</th>\n",
-       "      <td>out. 2021</td>\n",
+       "      <th>5504</th>\n",
+       "      <td>out. 2020</td>\n",
        "      <td>Distrito Federal</td>\n",
-       "      <td>209.484</td>\n",
-       "      <td>58.077</td>\n",
-       "      <td>3094325</td>\n",
+       "      <td>222.851</td>\n",
+       "      <td>56.930</td>\n",
+       "      <td>3055149</td>\n",
+       "      <td>265847334003</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5829</th>\n",
-       "      <td>nov. 2021</td>\n",
+       "      <th>5505</th>\n",
+       "      <td>nov. 2020</td>\n",
        "      <td>Distrito Federal</td>\n",
-       "      <td>199.167</td>\n",
-       "      <td>52.159</td>\n",
-       "      <td>3094325</td>\n",
+       "      <td>210.326</td>\n",
+       "      <td>54.881</td>\n",
+       "      <td>3055149</td>\n",
+       "      <td>265847334003</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5830</th>\n",
-       "      <td>dez. 2021</td>\n",
+       "      <th>5506</th>\n",
+       "      <td>dez. 2020</td>\n",
        "      <td>Distrito Federal</td>\n",
-       "      <td>210.250</td>\n",
-       "      <td>50.670</td>\n",
-       "      <td>3094325</td>\n",
+       "      <td>193.177</td>\n",
+       "      <td>51.968</td>\n",
+       "      <td>3055149</td>\n",
+       "      <td>265847334003</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5831 rows × 5 columns</p>\n",
+       "<p>5507 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -915,29 +1268,29 @@
        "3     mai. 2004          Rondônia              42.820             17.462   \n",
        "4     jun. 2004          Rondônia              39.616             18.505   \n",
        "...         ...               ...                 ...                ...   \n",
-       "5826  ago. 2021  Distrito Federal             206.265             55.557   \n",
-       "5827  set. 2021  Distrito Federal             217.979             51.866   \n",
-       "5828  out. 2021  Distrito Federal             209.484             58.077   \n",
-       "5829  nov. 2021  Distrito Federal             199.167             52.159   \n",
-       "5830  dez. 2021  Distrito Federal             210.250             50.670   \n",
+       "5502  ago. 2020  Distrito Federal             203.972             56.441   \n",
+       "5503  set. 2020  Distrito Federal             202.745             56.663   \n",
+       "5504  out. 2020  Distrito Federal             222.851             56.930   \n",
+       "5505  nov. 2020  Distrito Federal             210.326             54.881   \n",
+       "5506  dez. 2020  Distrito Federal             193.177             51.968   \n",
        "\n",
-       "      Populacao  \n",
-       "0       1562085  \n",
-       "1       1562085  \n",
-       "2       1562085  \n",
-       "3       1562085  \n",
-       "4       1562085  \n",
-       "...         ...  \n",
-       "5826    3094325  \n",
-       "5827    3094325  \n",
-       "5828    3094325  \n",
-       "5829    3094325  \n",
-       "5830    3094325  \n",
+       "      Populacao           PIB  \n",
+       "0       1562085   11004641436  \n",
+       "1       1562085   11004641436  \n",
+       "2       1562085   11004641436  \n",
+       "3       1562085   11004641436  \n",
+       "4       1562085   11004641436  \n",
+       "...         ...           ...  \n",
+       "5502    3055149  265847334003  \n",
+       "5503    3055149  265847334003  \n",
+       "5504    3055149  265847334003  \n",
+       "5505    3055149  265847334003  \n",
+       "5506    3055149  265847334003  \n",
        "\n",
-       "[5831 rows x 5 columns]"
+       "[5507 rows x 6 columns]"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -948,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
